add_executable(07_BinaryTreeTravel "01_BinaryTreeTravel/main.cpp" )
add_executable(08_ThreadedBTree "02_ThreadedBTree/main.cpp" "02_ThreadedBTree/ThreadedBTree.cpp" "02_ThreadedBTree/ThreadedBTree.h")
add_executable(09_BSTree "03_BSTree/main.cpp" "03_BSTree/BSTree.h")
add_executable(10_AVLTree "04_AVLTree/main.cpp")
add_executable(11_UnionFindSet "05_UnionFindSet/main.cpp")
add_executable(12_HuffmanTree "06_HuffmanTree/main.cpp")